[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/animations/mini_spark/spark_06.png" type="Texture" id=1]
[ext_resource path="res://assets/animations/mini_spark/spark_05.png" type="Texture" id=2]
[ext_resource path="res://scripts/Boss_Lightnings.gd" type="Script" id=3]
[ext_resource path="res://assets/graphics/tesla_emitter3.png" type="Texture" id=4]
[ext_resource path="res://assets/animations/Explosion.png" type="Texture" id=6]
[ext_resource path="res://assets/animations/new_space_mines/spark_01.png" type="Texture" id=7]
[ext_resource path="res://assets/animations/new_space_mines/spark_04.png" type="Texture" id=8]
[ext_resource path="res://assets/animations/new_space_mines/spark_03.png" type="Texture" id=9]
[ext_resource path="res://assets/animations/new_space_mines/spark_02.png" type="Texture" id=10]

[sub_resource type="GDScript" id=19]
script/source = "extends KinematicBody2D

var navagent : NavigationAgent2D
var target_position

var rotating_speed = 0.1

var this_enemy_on_screen = true

var move_up_complete = false # enemy will move up (relative to its spawn point) for 2 seconds before the path-finding/ player-hunting script begins

var lightning_strikes_against = 0
var is_staggered = false

onready var the_player = get_tree().get_nodes_in_group(\"player\")[0]

func _ready():
	navagent = $NavigationAgent2D
	navagent.connect(\"velocity_computed\", self, \"_on_velocity_computed\")
	$NavTimer.start()
	$Anim_sparky.play(\"sparky\")
	$move_up_timer.start()

	
func _physics_process(delta):
	if $\"/root/Global\".lightning_weapon_active and !is_staggered:
		lightning_strikes_against += 1
		if lightning_strikes_against >= 3:
			_on_ExtinctionTimer_timeout()
		else:
			is_staggered = true
			$LightningController.tentacles_shrink(true)
			$StaggerTimer.start()
			$LightningController.tentacles_can_damage_player = false
			return
			
	if is_staggered:
		rotation += rotating_speed / (lightning_strikes_against * 2)
		return
					
	# move out of spawner until bool value changed by move_up_timer node
	if !move_up_complete:
		position.y -= 0.1
		return
	
	if navagent.is_navigation_finished():
		return
		
	var target_position = navagent.get_next_location()
	var direction = global_position.direction_to(target_position)
	var velocity = direction * navagent.max_speed	
	move_and_slide(velocity)
	
	$Anim_sparky.rotation_degrees += 0.25
	if $Anim_sparky.rotation_degrees >= 360:
		$Anim_sparky.rotation_degrees = 0
	$LightningController.rotation_degrees += rotating_speed
	if $LightningController.rotation_degrees >= 360:
		$LightningController.rotation_degrees = 0


func _on_ExtinctionTimer_timeout():
	if $\"/root/Global\".lightning_weapon_active and !this_enemy_on_screen:
		return
	if lightning_strikes_against <= 2:
		return
	$Anim_sparky.scale.x *= 10
	$Anim_sparky.scale.y *= 10	
	$explosion.visible = true
#	$AnimatedSprite.visible = false
	$explosion.play(\"explode\")
	$LightningController.visible = false
	$TheEyes2.visible = false
	# work out how far away exploding mine is from player
	# and inflict damage if player within blast radius
	var player_position = the_player.global_position
	var mine_position = global_transform.origin
	var distance_from_player = player_position.distance_to(mine_position)
	if distance_from_player <= 175 and !$\"/root/Global\".lightning_weapon_active:
		# _____________________^^^ this
		# is the value for when the explosion affects the player
		$\"/root/Global\".taking_damage = true
	yield($explosion, \"animation_finished\")
	# calc random value for damage based on proximity
	if $\"/root/Global\".taking_damage:
		if distance_from_player > 99 and distance_from_player <= 175:
			$\"/root/Global\".player_damaged(5)
		else:
			if distance_from_player <= 100:
				$\"/root/Global\".player_damaged(9)

	queue_free()
	

func _on_NavTimer_timeout() -> void:
	var player_position = the_player.global_position
	navagent.set_target_location(player_position)
	$NavTimer.start()
	
func _on_Area2D_body_entered(body):
	if body.name == \"player\":
		lightning_strikes_against = 3
		navagent.max_speed *= 4
		rotating_speed *= 4
		$DelayTimer.start()
		
		
func _on_DelayTimer_timeout():
	_on_ExtinctionTimer_timeout()


func _on_move_up_timer_timeout():
#	$Lightnings/AnimatedSprite.play(\"star_enemy\")
	$TheEyes.visible = false
	$TheEyes2.visible = true
	$Area2D.monitoring = true
	navagent.max_speed *= 2
	move_up_complete = true
	$LightningController.tentacles_can_damage_player = true


func _on_VisibilityNotifier2D_screen_exited():
	this_enemy_on_screen = false


func _on_VisibilityNotifier2D_screen_entered():
	this_enemy_on_screen = true


func _on_StaggerTimer_timeout() -> void:
	is_staggered = false
	$LightningController.tentacles_shrink(false)
	$LightningController.tentacles_can_damage_player = true
"

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "star_enemy",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 13.3333, 250.833 )

[sub_resource type="CircleShape2D" id=16]
radius = 46.7357

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 672, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 768, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 864, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 960, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1056, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "explode",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=17]
radius = 255.218

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "sparky",
"speed": 10.0
} ]

[node name="Enemy1" type="KinematicBody2D" groups=["enemy"]]
modulate = Color( 0, 0.576471, 1, 1 )
scale = Vector2( 0.6, 0.6 )
z_index = -20
z_as_relative = false
script = SubResource( 19 )

[node name="TheEyes" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="TheEyes"]
modulate = Color( 0.662745, 0.94902, 0.0470588, 1 )
position = Vector2( -33.3333, 6.66666 )
scale = Vector2( 4, 4 )
z_index = 10
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="TheEyes"]
modulate = Color( 0.662745, 0.94902, 0.0470588, 1 )
position = Vector2( 53.3333, 6.66666 )
scale = Vector2( 4, 4 )
z_index = 10
texture = ExtResource( 4 )

[node name="TheEyes2" type="Node2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="TheEyes2"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -33.3333, 6.66666 )
scale = Vector2( 4, 4 )
z_index = 10
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="TheEyes2"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 53.3333, 6.66666 )
scale = Vector2( 4, 4 )
z_index = 10
texture = ExtResource( 4 )

[node name="LightningController" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Lightning1" type="Area2D" parent="LightningController"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="LightningController/Lightning1"]
self_modulate = Color( 0.172549, 0.937255, 0.0627451, 1 )
frames = SubResource( 1 )
animation = "star_enemy"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightningController/Lightning1"]
position = Vector2( -3.33333, 0.833333 )
shape = SubResource( 20 )

[node name="Lightning2" type="Area2D" parent="LightningController"]

[node name="AnimatedSprite2" type="AnimatedSprite" parent="LightningController/Lightning2"]
self_modulate = Color( 0.172549, 0.937255, 0.0627451, 1 )
rotation = 0.806299
frames = SubResource( 1 )
animation = "star_enemy"
frame = 1
playing = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="LightningController/Lightning2"]
position = Vector2( -3.33333, 0.833333 )
rotation = 0.765559
shape = SubResource( 20 )

[node name="Lightning3" type="Area2D" parent="LightningController"]

[node name="AnimatedSprite3" type="AnimatedSprite" parent="LightningController/Lightning3"]
self_modulate = Color( 0.172549, 0.937255, 0.0627451, 1 )
rotation = 1.62762
frames = SubResource( 1 )
animation = "star_enemy"
frame = 1
playing = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="LightningController/Lightning3"]
position = Vector2( -3.33333, 0.833333 )
rotation = 1.57344
shape = SubResource( 20 )

[node name="Lightning4" type="Area2D" parent="LightningController"]

[node name="AnimatedSprite4" type="AnimatedSprite" parent="LightningController/Lightning4"]
self_modulate = Color( 0.172549, 0.937255, 0.0627451, 1 )
rotation = 2.39837
frames = SubResource( 1 )
animation = "star_enemy"
playing = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="LightningController/Lightning4"]
position = Vector2( -3.33333, 0.833333 )
rotation = -0.768291
shape = SubResource( 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -1 )
shape = SubResource( 16 )

[node name="ExtinctionTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="explosion" type="AnimatedSprite" parent="."]
visible = false
self_modulate = Color( 0.576471, 0.941176, 0.533333, 1 )
scale = Vector2( 35, 35 )
frames = SubResource( 15 )
animation = "explode"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
max_speed = 55.0

[node name="NavTimer" type="Timer" parent="."]
wait_time = 0.408

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
monitoring = false

[node name="ExplodeCollisionShape" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, -1 )
shape = SubResource( 17 )

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 1.3
one_shot = true

[node name="move_up_timer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="Anim_sparky" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 0.776471, 0.952941, 0.0431373, 1 )
scale = Vector2( 0.16, 0.16 )
frames = SubResource( 18 )
animation = "sparky"
frame = 3
playing = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 1.5, 1 )
scale = Vector2( 3.65, 3.7 )

[node name="StaggerTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[connection signal="body_entered" from="LightningController/Lightning1" to="LightningController" method="_on_Lightning1_body_entered"]
[connection signal="body_entered" from="LightningController/Lightning2" to="LightningController" method="_on_Lightning2_body_entered"]
[connection signal="body_entered" from="LightningController/Lightning3" to="LightningController" method="_on_Lightning3_body_entered"]
[connection signal="body_entered" from="LightningController/Lightning4" to="LightningController" method="_on_Lightning4_body_entered"]
[connection signal="timeout" from="ExtinctionTimer" to="." method="_on_ExtinctionTimer_timeout"]
[connection signal="timeout" from="NavTimer" to="." method="_on_NavTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
[connection signal="timeout" from="move_up_timer" to="." method="_on_move_up_timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="StaggerTimer" to="." method="_on_StaggerTimer_timeout"]
